# BEV-Fusion-Perception

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  carla_spawn_track.py  config.yaml
cone-models/: blue_cone.fbx  orange_cone.fbx  yellow_cone.fbx
config/carla/: Default.Package.json
input/: cones.mat
lib/track-generator/: .gitignore  LICENSE  README.md  config.yaml  main.py  matlab_example.m  requirements.txt  track_generator.py  utils.py
resources/cones/: blue_cone_Cono.uasset  orange_cone_Cono.uasset  yellow_cone_Cono.uasset
resources/cones/UEblueprints/: BP_Cone_Blue.uasset  BP_Cone_Orange.uasset  BP_Cone_Yellow.uasset
resources/cones/meshes/: M_Cone_Black_Band.uasset  M_Cone_Blue.uasset  M_Cone_Orange.uasset  M_Cone_White_Band.uasset  M_Cone_Yellow.uasset
scripts/: replace_cones.py
src/camera-pipeline/: dataset.py  logger.py  losses.py  metrics.py  model.py  requirements.txt  visualization.py  warmup_config.py  warmup_training.py
src/camera-pipeline/warmup/: model.py
src/dataset_automation/: camera.py  carla_spawn_track.py  centerline_pipeline.py  cones.mat  cones_to_csv.py  coordinate_frames.py  dataset_builder.py  dataset_config.yaml  gt_extraction.py  lidar.py  procedural_track_gen.py  projection_2d.py  pursuit_controller.py  repo_paths.py  scene_recorder.py  sensor_attachment.py  sensor_capture.py  spawn_vehicles.py  track_spawner.py  visualization.py
src/lidar_detection/configs/: cone_dataset.yaml  second_centerpoint_cones.yaml
src/lidar_detection/datasets/: __init__.py  (+1 more)
tools/: track_to_centerline.cpp  visualize_cloud.py
(+7 files in other folders)
